// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<GoogleMap
  center={
    Object {
      "lat": 2,
      "lng": 4,
    }
  }
  onCenterChanged={[Function]}
  onZoomChanged={[Function]}
  options={
    Object {
      "clickableIcons": false,
      "mapTypeControl": false,
      "scrollwheel": false,
      "streetViewControl": false,
      "styles": Array [
        Object {
          "elementType": "geometry.stroke",
          "featureType": "road",
          "stylers": Array [
            Object {
              "visibility": "on",
            },
            Object {
              "color": "#d0d2d2",
            },
          ],
        },
        Object {
          "featureType": "road",
          "stylers": Array [
            Object {
              "visibility": "simplified",
            },
            Object {
              "color": "#efefef",
            },
          ],
        },
        Object {
          "featureType": "landscape.man_made",
          "stylers": Array [
            Object {
              "visibility": "simplified",
            },
            Object {
              "color": "#f6f1ec",
            },
          ],
        },
        Object {
          "elementType": "labels",
          "featureType": "poi",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "featureType": "transit.line",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "road",
          "stylers": Array [
            Object {
              "color": "#585a5b",
            },
          ],
        },
        Object {
          "elementType": "geometry.fill",
          "featureType": "road.highway",
          "stylers": Array [
            Object {
              "visibility": "on",
            },
            Object {
              "color": "#eff0ef",
            },
          ],
        },
        Object {
          "elementType": "geometry.fill",
          "featureType": "road.arterial",
          "stylers": Array [
            Object {
              "color": "#efefef",
            },
            Object {
              "visibility": "on",
            },
          ],
        },
        Object {
          "elementType": "labels.icon",
          "featureType": "road",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "poi.park",
          "stylers": Array [
            Object {
              "visibility": "on",
            },
            Object {
              "color": "#d0e2c9",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "landscape",
          "stylers": Array [
            Object {
              "color": "#f9f9f9",
            },
          ],
        },
        Object {
          "featureType": "transit.station.bus",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "labels",
          "featureType": "water",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "featureType": "water",
          "stylers": Array [
            Object {
              "color": "#a5c8ea",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "landscape.natural",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "road.local",
          "stylers": Array [
            Object {
              "color": "#e0e2e0",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "road.highway",
          "stylers": Array [
            Object {
              "color": "#afafaf",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "poi.school",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "poi.business",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "poi.medical",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "poi.business",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "featureType": "poi.government",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "poi.sports_complex",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "poi.attraction",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "geometry.fill",
          "featureType": "poi.place_of_worship",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {},
      ],
    }
  }
  zoom={14}
>
  <MarkerClusterer
    averageCenter={true}
    enableRetinaIcons={true}
    gridSize={45}
    minimumClusterSize={4}
  >
    <Marker
      icon={<div />}
      key="pin-id"
      onClick={[Function]}
      position={
        Object {
          "lat": 6,
          "lng": 7,
        }
      }
    />
    <Marker
      icon="https://siteimages.test.com/female.png"
      key="current-location"
      position={
        Object {
          "lat": 1,
          "lng": 3,
        }
      }
    />
  </MarkerClusterer>
</GoogleMap>
`;

exports[`should render correctly when there is no user location 1`] = `
<GoogleMap
  center={
    Object {
      "lat": 2,
      "lng": 4,
    }
  }
  onCenterChanged={[Function]}
  onZoomChanged={[Function]}
  options={
    Object {
      "clickableIcons": false,
      "mapTypeControl": false,
      "scrollwheel": false,
      "streetViewControl": false,
      "styles": Array [
        Object {
          "elementType": "geometry.stroke",
          "featureType": "road",
          "stylers": Array [
            Object {
              "visibility": "on",
            },
            Object {
              "color": "#d0d2d2",
            },
          ],
        },
        Object {
          "featureType": "road",
          "stylers": Array [
            Object {
              "visibility": "simplified",
            },
            Object {
              "color": "#efefef",
            },
          ],
        },
        Object {
          "featureType": "landscape.man_made",
          "stylers": Array [
            Object {
              "visibility": "simplified",
            },
            Object {
              "color": "#f6f1ec",
            },
          ],
        },
        Object {
          "elementType": "labels",
          "featureType": "poi",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "featureType": "transit.line",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "road",
          "stylers": Array [
            Object {
              "color": "#585a5b",
            },
          ],
        },
        Object {
          "elementType": "geometry.fill",
          "featureType": "road.highway",
          "stylers": Array [
            Object {
              "visibility": "on",
            },
            Object {
              "color": "#eff0ef",
            },
          ],
        },
        Object {
          "elementType": "geometry.fill",
          "featureType": "road.arterial",
          "stylers": Array [
            Object {
              "color": "#efefef",
            },
            Object {
              "visibility": "on",
            },
          ],
        },
        Object {
          "elementType": "labels.icon",
          "featureType": "road",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "poi.park",
          "stylers": Array [
            Object {
              "visibility": "on",
            },
            Object {
              "color": "#d0e2c9",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "landscape",
          "stylers": Array [
            Object {
              "color": "#f9f9f9",
            },
          ],
        },
        Object {
          "featureType": "transit.station.bus",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "labels",
          "featureType": "water",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "featureType": "water",
          "stylers": Array [
            Object {
              "color": "#a5c8ea",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "landscape.natural",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "road.local",
          "stylers": Array [
            Object {
              "color": "#e0e2e0",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "road.highway",
          "stylers": Array [
            Object {
              "color": "#afafaf",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "poi.school",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "poi.business",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "poi.medical",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "poi.business",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "featureType": "poi.government",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "poi.sports_complex",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "poi.attraction",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "geometry.fill",
          "featureType": "poi.place_of_worship",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {},
      ],
    }
  }
  zoom={14}
>
  <MarkerClusterer
    averageCenter={true}
    enableRetinaIcons={true}
    gridSize={45}
    minimumClusterSize={4}
  >
    <Marker
      icon={<div />}
      key="pin-id"
      onClick={[Function]}
      position={
        Object {
          "lat": 6,
          "lng": 7,
        }
      }
    />
  </MarkerClusterer>
</GoogleMap>
`;
